--- a/dailyfresh/templates/tt_user/login.html
+++ b/dailyfresh/templates/tt_user/login.html
@@ -3,7 +3,7 @@
 
 
 	<div class="login_top clearfix">
-		<a href="/" class="login_logo"><img src="/static/images/logo02.png"></a>
+		<a href="/user/index/" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -16,7 +16,8 @@
 					<a href="/user/register/">立即注册</a>
 				</div>
 				<div class="form_input">
-					<form>
+					<form method="post" action="/user/user_info/">
+                        {% csrf_token %}
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
 						<div class="user_error">输入错误</div>
 						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
