--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -10,6 +10,46 @@
     {% endblock script%}
 </head>
 <body>
+{%if top|default:'1' == '1'%}
+	<div class="header_con">
+		<div class="header">
+			<div class="welcome fl">欢迎来到天天生鲜!</div>
+			<div class="fr">
+				{%if request.session.uid%}
+				<div class="login_btn fl">
+					欢迎您：<em>{{request.session.uname}}</em>
+					<span>|</span>
+					<a href="/user/logout/">退出</a>
+				</div>
+				{%else%}
+				<div class="login_btn fl">
+					<a href="/user/login/">登录</a>
+					<span>|</span>
+					<a href="/user/register/">注册</a>
+				</div>
+				{%endif%}
+				<div class="user_link fl">
+					<span>|</span>
+					<a href="/user/">用户中心</a>
+					<span>|</span>
+					<a href="/cart/">我的购物车</a>
+					<span>|</span>
+					<a href="/user/order/">我的订单</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="search_bar clearfix">
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;{{title}}</div>
+		<div class="search_con fr"><form method="get" action="/search/" target="_blank">
+			<input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+			<input type="submit" class="input_btn fr" value="搜索">
+		</form></div>
+	</div>
+{%endif%}
+
     {% block body %}
 
     {% endblock body %}
