--- a/dailyfresh/templates/tt_goods/index.html
+++ b/dailyfresh/templates/tt_goods/index.html
@@ -12,7 +12,7 @@
 		<div class="navbar">
 			<h1 class="fl">全部商品分类</h1>
 			<ul class="navlist fl">
-				<li><a href="">首页</a></li>
+				<li><a href="/">首页</a></li>
 				<li class="interval">|</li>
 				<li><a href="">手机生鲜</a></li>
 				<li class="interval">|</li>
@@ -54,10 +54,10 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for click in item.list_click %}
-				<a href="#">{{ click.gtitle|truncatechars:15 }}</a>
+				<a href="">{{ click.gtitle|truncatechars:15 }}</a>
                 {% endfor %}
 			</div>
-			<a href="/list{{ forloop.counter }}_1" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/list{{ forloop.counter }}_1_1" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -65,8 +65,8 @@
 			<ul class="goods_list fl">
                 {% for new in item.list_new %}
 				<li>
-					<h4><a href="#">{{ new.gtitle|truncatechars:15 }}</a></h4>
-					<a href="#"><img src="/static/{{ new.gpic }}"></a>
+					<h4><a href="{{ new.id }}">{{ new.gtitle|truncatechars:15 }}</a></h4>
+					<a href="{{ new.id }}"><img src="/static/{{ new.gpic }}"></a>
 					<div class="prize">¥ {{ new.gprice }}</div>
 				</li>
                 {% endfor %}
@@ -75,199 +75,6 @@
 	</div>
     {% endfor %}
 
-{#	<div class="list_model">#}
-{#		<div class="list_title clearfix">#}
-{#			<h3 class="fl" id="model02">海鲜水产</h3>#}
-{#			<div class="subtitle fl">#}
-{#				<span>|</span>#}
-{#				<a href="#">河虾</a>#}
-{#				<a href="#">扇贝</a>				#}
-{#			</div>#}
-{#			<a href="#" class="goods_more fr">查看更多 ></a>#}
-{#		</div>#}
-{##}
-{#		<div class="goods_con clearfix">#}
-{#			<div class="goods_banner fl"><img src="/static/images/banner02.jpg"></div>#}
-{#			<ul class="goods_list fl">#}
-{#				<li>#}
-{#					<h4><a href="#">青岛野生海捕大青虾</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods018.jpg"></a>#}
-{#					<div class="prize">¥ 48.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">扇贝</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods019.jpg"></a>#}
-{#					<div class="prize">¥ 46.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">冷冻秋刀鱼</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods020.jpg"></a>#}
-{#					<div class="prize">¥ 19.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">基围虾</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods021.jpg"></a>#}
-{#					<div class="prize">¥ 25.00</div>#}
-{#				</li>#}
-{#			</ul>#}
-{#		</div>#}
-{#	</div>#}
-{##}
-{#	<div class="list_model">#}
-{#		<div class="list_title clearfix">#}
-{#			<h3 class="fl" id="model03">猪牛羊肉</h3>#}
-{#			<div class="subtitle fl">#}
-{#				<span>|</span>#}
-{#				<a href="#">鲜芒</a>#}
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
-{#			</div>#}
-{#			<a href="#" class="goods_more fr">查看更多 ></a>#}
-{#		</div>#}
-{##}
-{#		<div class="goods_con clearfix">#}
-{#			<div class="goods_banner fl"><img src="/static/images/banner03.jpg"></div>#}
-{#			<ul class="goods_list fl">#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#			</ul>#}
-{#		</div>#}
-{#	</div>#}
-{##}
-{#	<div class="list_model">#}
-{#		<div class="list_title clearfix">#}
-{#			<h3 class="fl" id="model04">禽类蛋品</h3>#}
-{#			<div class="subtitle fl">#}
-{#				<span>|</span>#}
-{#				<a href="#">鲜芒</a>#}
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
-{#			</div>#}
-{#			<a href="#" class="goods_more fr">查看更多 ></a>#}
-{#		</div>#}
-{##}
-{#		<div class="goods_con clearfix">#}
-{#			<div class="goods_banner fl"><img src="/static/images/banner04.jpg"></div>#}
-{#			<ul class="goods_list fl">#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#			</ul>#}
-{#		</div>#}
-{#	</div>#}
-{##}
-{#	<div class="list_model">#}
-{#		<div class="list_title clearfix">#}
-{#			<h3 class="fl" id="model05">新鲜蔬菜</h3>#}
-{#			<div class="subtitle fl">#}
-{#				<span>|</span>#}
-{#				<a href="#">鲜芒</a>#}
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
-{#			</div>#}
-{#			<a href="#" class="goods_more fr">查看更多 ></a>#}
-{#		</div>#}
-{##}
-{#		<div class="goods_con clearfix">#}
-{#			<div class="goods_banner fl"><img src="/static/images/banner05.jpg"></div>#}
-{#			<ul class="goods_list fl">#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#			</ul>#}
-{#		</div>#}
-{#	</div>#}
-{##}
-{#	<div class="list_model">#}
-{#		<div class="list_title clearfix">#}
-{#			<h3 class="fl" id="model06">速冻食品</h3>#}
-{#			<div class="subtitle fl">#}
-{#				<span>|</span>#}
-{#				<a href="#">鲜芒</a>#}
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
-{#			</div>#}
-{#			<a href="#" class="goods_more fr">查看更多 ></a>#}
-{#		</div>#}
-{##}
-{#		<div class="goods_con clearfix">#}
-{#			<div class="goods_banner fl"><img src="/static/images/banner06.jpg"></div>#}
-{#			<ul class="goods_list fl">#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#			</ul>#}
-{#		</div>#}
-{#	</div>#}
 
     	<script type="text/javascript" src="js/slideshow.js"></script>
 	<script type="text/javascript">
