--- a/dailyfresh/templates/tt_goods/list.html
+++ b/dailyfresh/templates/tt_goods/list.html
@@ -2,7 +2,7 @@
 
     {% block breadcrum %}
 	<div class="breadcrumb">
-		<a href="#">全部分类</a>
+		<a href="/">全部分类</a>
 		<span>></span>
 		<a href="#">{{ type }}</a>
 	</div>
@@ -14,16 +14,16 @@
 
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="#" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
+				<a href="/list{{ type.id }}_1_1/" {% if order_by == '1' %}class="active"{% endif %} >默认</a>
+				<a href="/list{{ type.id }}_1_2/" {% if order_by == '2' %}class="active"{% endif %}>价格</a>
+				<a href="/list{{ type.id }}_1_3/" {% if order_by == '3' %}class="active"{% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
                 {% for item in page %}
 				<li>
-					<a href="detail.html"><img src="/static/{{ item.gpic}}"></a>
-					<h4><a href="detail.html">{{ item.gtitle }}</a></h4>
+					<a href="/{{ item.id }}/"><img src="/static/{{ item.gpic}}"></a>
+					<h4><a href="{{ item.id }}">{{ item.gtitle }}</a></h4>
 					<div class="operate">
 						<span class="prize">￥{{ item.gprice }}</span>
 						<span class="unit">{{ item.gunit }}</span>
@@ -32,142 +32,18 @@
 				</li>
                 {% endfor %}
 
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods004.jpg"></a>#}
-{#					<h4><a href="#">吐鲁番梨光杏</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥5.50</span>#}
-{#						<span class="unit">5.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods005.jpg"></a>#}
-{#					<h4><a href="#">黄肉桃</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥10.00</span>#}
-{#						<span class="unit">10.00/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods006.jpg"></a>#}
-{#					<h4><a href="#">进口西梅</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥28.80</span>#}
-{#						<span class="unit">28.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods007.jpg"></a>#}
-{#					<h4><a href="#">香梨</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥6.45</span>#}
-{#						<span class="unit">6.45/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods008.jpg"></a>#}
-{#					<h4><a href="#">栗子</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥9.50</span>#}
-{#						<span class="unit">9.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods009.jpg"></a>#}
-{#					<h4><a href="#">海南香蕉</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.30</span>#}
-{#						<span class="unit">3.30/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods010.jpg"></a>#}
-{#					<h4><a href="#">青苹果</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥5.00</span>#}
-{#						<span class="unit">5.00/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods011.jpg"></a>#}
-{#					<h4><a href="#">山莓</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥28.80</span>#}
-{#						<span class="unit">28.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods012.jpg"></a>#}
-{#					<h4><a href="#">奇异果</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥25.80</span>#}
-{#						<span class="unit">25.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods013.jpg"></a>#}
-{#					<h4><a href="#">蜜桔</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥4.80</span>#}
-{#						<span class="unit">4.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods014.jpg"></a>#}
-{#					<h4><a href="#">脐橙</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.50</span>#}
-{#						<span class="unit">3.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods001.jpg"></a>#}
-{#					<h4><a href="#">进口柠檬</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.90</span>#}
-{#						<span class="unit">3.90/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="images/goods/goods002.jpg"></a>#}
-{#					<h4><a href="#">玫瑰香葡萄</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥16.80</span>#}
-{#						<span class="unit">16.80/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
+
 			</ul>
 
 			<div class="pagenation">
                 {% if page.has_previous %}
-                    <a href="/list{{ type.id }}_1">首页</a>
-                    <a href="/list{{ type.id }}_{{ page.number|add:-1 }}"><上一页</a>
+                    <a href="/list{{ type.id }}_1_{{ order_by }}">首页</a>
+                    <a href="/list{{ type.id }}_{{ page.number|add:-1 }}_{{ order_by }}">上一页</a>
                 {% endif %}
 
-                {% for pindex in pageindex %}
+                {% for pindex in pindex_list %}
                     {% if pindex == page.number %}
-                        <a href="/list{{ type.id }}_{{ pindex }}/" class="active">{{ pindex }}</a>
+                        <a href="" class="active">{{ pindex }}</a>
                     {% else %}
                         <a href="/list{{ type.id }}_{{ pindex }}/">{{ pindex }}</a>
 
@@ -177,8 +53,8 @@
 
 
                 {% if page.has_next %}
-                    <a href="/list{{ type.id }}_{{ page.number|add:1 }}">下一页></a>
-                    <a href="/list{{ type.id }}_{{ page.paginator.num_pages }}">末页></a>
+                    <a href="/list{{ type.id }}_{{ page.number|add:1 }}_{{ order_by }}">下一页</a>
+                    <a href="/list{{ type.id }}_{{ page.paginator.num_pages }}_{{ order_by }}">末页></a>
                 {% endif %}
 
 			</div>
