--- a/dailyfresh/templates/search/search.html
+++ b/dailyfresh/templates/search/search.html
@@ -2,8 +2,52 @@
 
 {% block breadcrum %}
      <div class="main_wrap clearfix">
+         <ul class="goods_type_list clearfix">
+                {% for item in page_obj %}
+				<li>
+					<a href="/{{ item.object.id }}/"><img src="/static/{{ item.object.gpic}}"></a>
+					<h4><a href="{{ item.object.id }}">{{ item.object.gtitle }}</a></h4>
+					<div class="operate">
+						<span class="prize">￥{{ item.object.gprice }}</span>
+						<span class="unit">{{ item.object.gunit }}</span>
+						<a href="#" class="add_goods" title="加入购物车"></a>
+					</div>
+				</li>
+                {% endfor %}
 
+
+			</ul>
+         <div class="pagenation">
+                {% if page_obj.has_previous %}
+                    <a href="/search/?q={{ query }}&page=1">首页</a>
+                    <a href="/search/?q={{ query }}&page={{ page_obj.number|add:-1 }}">上一页</a>
+                {% endif %}
+{% load filters %}
+
+                {% for pindex in page_obj|page_list %}
+                    {% if pindex == page.number %}
+                        <a href="" class="active">{{ pindex }}</a>
+                    {% else %}
+                        <a href="/search/?q={{ query }}&page={{ pindex }}">{{ pindex }}</a>
+
+                    {% endif %}
+
+                {% endfor %}
+
+
+                {% if page_obj.has_next %}
+                    <a href="/search/?q={{ query }}&page={{ page_obj.number|add:1 }}">下一页</a>
+                    <a href="/search/?q={{ query }}&page={{ page_obj.paginator.num_pages }}">末页></a>
+                {% endif %}
+
+			</div>
     </div>
+
+
+
+
+
+
 {% endblock breadcrum %}
 
 
